--- a/AddSourceCodeToCompilerHelpers.csproj
+++ b/AddSourceCodeToCompilerHelpers.csproj
@@ -9,7 +9,7 @@
 		<Version>1.0.1</Version>
 		<Description>Source generator that generates extension to add code marked as Include to compilation that you send in.</Description>
 		<Authors>musictopia</Authors>
-		<PackageProjectUrl></PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/musictopia2/AddSourceCodeToCompilerHelpers</PackageProjectUrl>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
